archmirror/3-http-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: archmirror-pvc
      containers:
        - name: http-server
          image: npastorale/archmirror-http-server
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
              readOnly: true
