archmirror/archmirror.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: archmirror

---
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: archmirror
spec:
  type: ClusterIP
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: archmirror
  labels:
    app: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: archmirror-pvc
      containers:
        - name: http-server
          image: npastorale/archmirror-http-server:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
              readOnly: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  namespace: archmirror
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mirrors.nahue.com.ar
      secretName: mirrors
  rules:
    - host: mirrors.nahue.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server
                port:
                  number: 80
